--- a/experience.html
+++ b/experience.html
@@ -57,12 +57,31 @@
         </nav>
     </header>
     <main class="row">
-        <section class="col-12 col-sm-12 experience">
+        <section class="col-12 col-sm-12 experience"></section>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Photographer | Portraits, Events, & Nature</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
+                <h5 class="col-12 col-sm-12 e-co">Duke Eye Center - Main Campus</h5>
+                <p class="col-12 col-sm-12 e-time"><i>Sept. 2024 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Durham, North Carolina</p>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Under close supervision performs preliminary screening examinations for physician review including, but not limited to, central and peripheral visual field tests; simple color vision tests; indentation and applantation tonometry tests to determine intraocular pressure and pupil testing for size, equality and reaction prior to dilation.</li>
+                    <li class="col-12 col-sm-12">Examines the cornea, lens, and anterior chamber of the eye using a slit lamp and note variations from normal.</li>
+                    <li class="col-12 col-sm-12">Measures acuity of patient, with and without glasses, for distance and near vision; obtains optical and lensometry measurements to determine lens prescription and correct acuity problems; records findings on patient chart. Administers Electro-Retinogram and Electro-Oculogram tests to patients.</li>
+                    <li class="col-12 col-sm-12">Obtains medical and personal data for patient charts.</li>
+                    <li class="col-12 col-sm-12">Assists the physician to fit patients with contact lenses.</li>
+                    <li class="col-12 col-sm-12">Calibrates and maintains all instruments used including, but not limited to, biomicroscopes, lensometer, keratometer, tangent screen, slit lamp and tonometers; cleans and stocks consultation rooms and microbiology laboratory with drugs and other supplies as needed. Performs other related duties incidental to the work described herein.</li>
+                </ul>
+            </article>
+            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
+                <img id="duke_eye_center" class="col-12 col-sm-12 col-lg-6" src="duke_eye_center.png" onMouseDown="popupMsg('Please do not download this image')">
+                <a href="https://www.dukehealth.org/locations/duke-eye-center" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Duke Eye Center - Homepage</a>
+            </article>
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Photographer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
-                <p class="col-12 col-sm-12 e-time"><i>March 2016 - Present</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Mar. 2016 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Manages photography projects, from planning and shooting to post-processing, ensuring high-quality images</li>
@@ -75,7 +94,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img id="saw_photo" class="col-12 col-sm-12 col-lg-6" src="BRP_Fall_Portrait.jpg" onMouseDown="popupMsg('Unable to access image')">
+                <img id="saw_photo" class="col-12 col-sm-12 col-lg-6" src="BRP_Fall_Portrait.jpg" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="https://www.stephenwenzelphotography.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Stephen Wenzel Photography</a>
             </article>
 
@@ -96,7 +115,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="wcent.webp" onMouseDown="popupMsg('Unable to access image')">
+                <img class="col-12 col-sm-12 col-lg-6" src="wcent.webp" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="https://www.wncentdoctors.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Western Carolina Ear, Nose, and Throat Specialists</a>
             </article>
 
@@ -114,14 +133,14 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="wfps.jpg" onMouseDown="popupMsg('Unable to access image')">
+                <img class="col-12 col-sm-12 col-lg-6" src="wfps.jpg" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="https://wenzelfacialsurgery.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Wenzel Facial Plastic Surgery</a>
             </article>
 
             <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
-                <p class="col-12 col-sm-12 e-time"><i>May 2022 - April 2023</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>May 2022 - Apr. 2023</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12"> 
                     <li class="col-12 col-sm-12">Conducted thorough screenings of new, established, emergency, consultational, and referred patients to identify any visual impairments, eye diseases, or ocular conditions</li>
@@ -136,14 +155,14 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="MEA.jpg" onMouseDown="popupMsg('Unable to access image')">
+                <img class="col-12 col-sm-12 col-lg-6" src="MEA.jpg" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="https://mountaineye.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Mountain Eye Associates</a>
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate Researcher</h4>
                 <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers's Lab - UNC Chapel Hill Biology Department</h5>
-                <p class="col-12 col-sm-12 e-time"><i>January 2022 - April 2022</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Jan. 2022 - Apr. 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Critically analyzed published scientific literature to investigate the effects of drug treatments on acetylated and de-acetylated microtubules in <i>Drosophila melanogaster</i></li>
@@ -162,7 +181,8 @@
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Organic Chemistry II Peer Mentor</h4>
                 <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
-                <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Aug. 2021 - Dec. 2021,</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Jan. 2022 - Apr. 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Created study aids and supplemental worksheets to help students taking the second course of organic chemistry at UNC Chapel Hill</li>
@@ -172,7 +192,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="organic_chem.jpg" onMouseDown="popupMsg('Unable to access image')">
+                <img class="col-12 col-sm-12 col-lg-6" src="organic_chem.jpg" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="https://www.togetherplatform.com/blog/peer-mentorship" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-1" target="blank">How to be a Great Peer Mentor</a>
                 <a href="https://www.liberty.edu/casas/blog/the-power-of-peer-mentoring/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-1 mb-3" target="blank">The Power of Peer Mentoring</a>
             </article>
@@ -180,7 +200,8 @@
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate COVID-19 Testing Volunteer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</h5>
-                <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Aug. 2021 - Dec. 2021,</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Jan. 2022 - Apr. 2022,</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Developed understanding of how cultural backgrounds, values, and ethical principles can shape people's health care decisions and behavior</li>
@@ -191,14 +212,16 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img id="cssc_pic" class="col-12 col-sm-12 col-lg-6" href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" src="CarolinaCSSC1-768x554.png" onMouseDown="popupMsg('Unable to access image')">
+                <img id="cssc_pic" class="col-12 col-sm-12 col-lg-6" href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" src="CarolinaCSSC1-768x554.png" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Carolina COVID-19 Student Services Corps</a>
             </article>
             
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Medical and Online Assistant</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Online Marketing Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</h5>
-                <p class="col-12 col-sm-12 e-time"><i>Summers of 2018, 2019, & 2021</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>May 2018 - July 2018,</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>May 2019 - July 2019,</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>May 2021 - July 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Optimized website content for a seamless user experience utilizing HTML, CSS, and the Wix website builder</li>
@@ -207,7 +230,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1067151256/m%3D900/v2?sig=c8bf9335a1c396f9c2a060c3336e2b3630dce36af937a90e16f34faab7edbc67" onMouseDown="popupMsg('Unable to access image')">
+                <img class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1067151256/m%3D900/v2?sig=c8bf9335a1c396f9c2a060c3336e2b3630dce36af937a90e16f34faab7edbc67" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="https://www.wncentdoctors.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Western Carolina ENT & Center for Hearing</a>
             </article>
 
@@ -222,7 +245,7 @@
                 </ul>
             </article>
             <article style="margin-bottom: 5vh;" class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="unc_dentistry.jpg" onMouseDown="popupMsg('Unable to access image')">
+                <img class="col-12 col-sm-12 col-lg-6" src="unc_dentistry.jpg" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="https://dentistry.unc.edu/discovery/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">UNC Adams School of Dentistry - Research</a>
             </article>
         </section>
