--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
     <main class="row">
         <section id="content" class="col-12 col-sm-12 col-lg-12">
             <article class="col-12 col-sm-6 col-lg-4 headshot_box">
-                <img id="headshot" src="transparent_headshot.png" onMouseDown="popupMsg('Unable to access image')">
+                <img id="headshot" src="transparent_headshot.png" onMouseDown="popupMsg('Please do not download this image')">
             </article>
             <article class="col-12 col-sm-12 col-md-6 col-lg-6 mt-2 signature_title">
-                <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Unable to access image')">
+                <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Please do not download this image')">
                 <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">INTERACTIVE ONLINE RESUME</p>
-                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(August 2024 Update)</p>
+                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(September 2024 Update)</p>
             </article>
         </section>
     </main>
