--- a/education.html
+++ b/education.html
@@ -63,7 +63,7 @@
             <h2 class="col-12 col-sm-12 e-titles">Bachelor's Degree</h2>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <img id="unc" class="col-11 col-sm-8 col-lg-6" src="unc_logo.png" onMouseDown="popupMsg('Unable to access image')">
+                <img id="unc" class="col-11 col-sm-8 col-lg-6" src="unc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Bachelor of Science - B.S. Biology, Chemistry & Neuroscience Minors</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2018 - May 2022</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Chapel Hill, North Carolina</p>
@@ -72,31 +72,31 @@
             <h2 class="col-12 col-sm-12 e-titles">Post-Baccalaureate Courses</h2>
 
             <article class="col-12 col-sm-12 col-lg-4 e-about">
-                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="ncsu_logo.png" onMouseDown="popupMsg('Unable to access image')">
+                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="ncsu_logo.png" onMouseDown="popupMsg('Please do not download this image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>May 2023 - June 2023</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Human Anatomy & Physiology I</p>
             </article>
             <article class="col-12 col-sm-12 col-lg-4 e-about">
-                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="ecu_logo.png" onMouseDown="popupMsg('Unable to access image')">
+                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="ecu_logo.png" onMouseDown="popupMsg('Please do not download this image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>May 2021 - June 2023</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Human Genetics / General Physics II</p>
             </article>
             <article class="col-12 col-sm-12 col-lg-4 e-about">
-                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="sandhillscc_logo.png" onMouseDown="popupMsg('Unable to access image')">
+                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="sandhillscc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2023 - December 2023</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Microbiology</p>
             </article>
             <article class="col-12 col-sm-12 col-lg-4 e-about">
-                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="scc_logo.png" onMouseDown="popupMsg('Unable to access image')">
+                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="scc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>January 2023 - May 2023</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Human Anatomy & Physiology II</p>
             </article>
             <article class="col-12 col-sm-12 col-lg-4 e-about">
-                <img id="hcc" class="col-8 col-sm-6 col-lg-4" src="HCC-Logo-White-footer.png" onMouseDown="popupMsg('Unable to access image')">
+                <img id="hcc" class="col-8 col-sm-6 col-lg-4" src="HCC-Logo-White-footer.png" onMouseDown="popupMsg('Please do not download this image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2022 - May 2023</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Medical Terminology for Health Professionals I & II,</p>
@@ -106,7 +106,7 @@
             <h2 class="col-12 col-sm-12 e-titles">High School Diploma</h2>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <img id="ths" class="col-11 col-sm-8 col-lg-6" src="ths.png" onMouseDown="popupMsg('Unable to access image')">
+                <img id="ths" class="col-11 col-sm-8 col-lg-6" src="ths.png" onMouseDown="popupMsg('Please do not download this image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">High School Diploma</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2014 - June 2018</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Waynesville, North Carolina</p>
