--- a/printing.html
+++ b/printing.html
@@ -45,6 +45,8 @@
         <!-- (hiding until there is space to put it. It takes too much space.)
         <a class="col-12 col-sm-12 text-center" id="website_banner" href="https://stephenawenzel.github.io/resume/"><span>Link to view my interactive resume.</span></a>
         -->
+
+            <!--If you need extra margin, add this before class - style="margin-top: 7vh;" -->
     </section>
     <section class="row experience" style="width: 100vw;">
         <h2 class="col-12 col-sm-12 section-titles">Education</h2>
@@ -61,13 +63,28 @@
     </section>
     <section class="row experience">
         <h2 class="col-12 col-sm-12 section-titles">Experience</h2>
-        <section class="col-12 col-sm-12 group">
+        <section class="col-12 col-sm-12 group"></section>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Photographer | Portraits, Events, & Nature</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
+                <h5 class="col-12 col-sm-12 e-co">Duke Eye Center - Main Campus</h5>
+                <p class="col-12 col-sm-12 e-time"><i>Sept. 2024 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Durham, North Carolina</p>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Under close supervision performs preliminary screening examinations for physician review including, but not limited to, central and peripheral visual field tests; simple color vision tests; indentation and applantation tonometry tests to determine intraocular pressure and pupil testing for size, equality and reaction prior to dilation.</li>
+                    <li class="col-12 col-sm-12">Examines the cornea, lens, and anterior chamber of the eye using a slit lamp and note variations from normal.</li>
+                    <li class="col-12 col-sm-12">Measures acuity of patient, with and without glasses, for distance and near vision; obtains optical and lensometry measurements to determine lens prescription and correct acuity problems; records findings on patient chart. Administers Electro-Retinogram and Electro-Oculogram tests to patients.</li>
+                    <li class="col-12 col-sm-12">Obtains medical and personal data for patient charts.</li>
+                    <li class="col-12 col-sm-12">Assists the physician to fit patients with contact lenses.</li>
+                    <li class="col-12 col-sm-12">Calibrates and maintains all instruments used including, but not limited to, biomicroscopes, lensometer, keratometer, tangent screen, slit lamp and tonometers; cleans and stocks consultation rooms and microbiology laboratory with drugs and other supplies as needed. Performs other related duties incidental to the work described herein.</li>
+                </ul>
+            </article>
+
+            <article style="margin-top: 3vh;" class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Photographer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Mar. 2016 - Present</i></p>
-                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                <p class="col-12 col-sm-12 e-location">Durham, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Manages photography projects, from planning and shooting to post-processing, ensuring high-quality images</li>
                     <li class="col-12 col-sm-12">Collaborates closely with clients, effectively capturing and showcasing their individuality within diverse environments</li>
@@ -79,7 +96,7 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article style="margin-top: 3vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Medical Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose, and Throat Specialists</h5>
                 <p class="col-12 col-sm-12 e-time"><i>May 2023 - June 2024</i></p>
@@ -96,7 +113,7 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Marketing Manager</h4>
                 <h5 class="col-12 col-sm-12 e-co">Wenzel Facial Plastic Surgery</h5>
                 <p class="col-12 col-sm-12 e-time"><i>May 2023 - June 2024</i></p>
@@ -110,7 +127,7 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article  style="margin-top: 2vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
                 <p class="col-12 col-sm-12 e-time"><i>May 2022 - Apr. 2023</i></p>
@@ -128,7 +145,7 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article style="margin-top: 2vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate Researcher</h4>
                 <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers's Lab - UNC Chapel Hill Biology Department</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Jan. 2022 - Apr. 2022</i></p>
@@ -142,10 +159,10 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article style="margin-top: 2vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Organic Chemistry II Peer Mentor</h4>
                 <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
-                <p class="col-12 col-sm-12 e-time"><i>Aug. 2021 - Apr. 2022</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Aug. 2021 - Dec. 2021, Jan. 2022 - Apr. 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Created study aids and supplemental worksheets to help students taking the second course of organic chemistry at UNC Chapel Hill</li>
@@ -155,10 +172,10 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article style="margin-top: 2vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate COVID-19 Testing Volunteer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</h5>
-                <p class="col-12 col-sm-12 e-time"><i>Aug. 2021 - Apr. 2022</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Aug. 2021 - Dec. 2021, Jan. 2022 - Apr. 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Developed understanding of how cultural backgrounds, values, and ethical principles can shape people's health care decisions and behavior</li>
@@ -169,28 +186,15 @@
                 </ul>
             </article>
 
-            <!--If you need extra margin, add this before class - style="margin-top: 7vh;" -->
-
-            <article  class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Medical and Online Assistant</h4>
+            <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Online Marketing Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</h5>
-                <p class="col-12 col-sm-12 e-time"><i>Summers of 2018, 2019, & 2021</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>May 2018 - July 2018, May 2019 - July 2019, June 2021 - July 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Optimized website content for a seamless user experience utilizing HTML, CSS, and the Wix website builder</li>
                     <li class="col-12 col-sm-12">Crafted engaging content through photography, videography, blog posts, and website material to expand outreach efforts</li>
                     <li class="col-12 col-sm-12">Observed and worked alongside otolaryngologists to gain insight into the medical and surgical treatments of hearing loss, ear infections, balance disorders, tinnitus, nerve pain, and facial and cranial nerve disorders</li>
-                </ul>
-            </article>
-
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Undergraduate Research Assistant</h4>
-                <h5 class="col-12 col-sm-12 e-co">UNC Adams School of Dentistry</h5>
-                <p class="col-12 col-sm-12 e-time"><i>Summer 2020</i></p>
-                <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
-                <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Contributed to the development of a shared understanding of "competence" among health-related professions, with the aim of enhancing the applicant review process</li>
-                    <li class="col-12 col-sm-12">Leveraged Microsoft Excel to expedite the research process by using formulas and sorting to select pertinent research papers</li>
                 </ul>
             </article>
 
@@ -202,7 +206,8 @@
             <article class="activity col-12 col-sm-3 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Field Instructor & Videographer</h4>
                 <p class="col-12 col-sm-12 e-time">Tuscola High School Marching Band</p>
-                <p class="col-12 col-sm-12 e-time">July 2023 - Dec. 2023</p>
+                <p class="col-12 col-sm-12 e-time">July 2023 - Dec. 2023,</p>
+                <p class="col-12 col-sm-12 e-time">Aug. 2024 - Sept. 2024</p>
             </article>
             <article class="activity col-12 col-sm-3 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Scout Advancement Mentor</h4>
@@ -212,12 +217,12 @@
             <article class="activity col-12 col-sm-3 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">UNC Red Cross Club</h4>
                 <h5 class="col-12 col-sm-12 e-co">Social Media Chair: August '21 - May '22</h5>
-                <p class="col-12 col-sm-12 e-time">Member: Jan. 2020 to May 2022</p>
+                <p class="col-12 col-sm-12 e-time">Member: Jan. 2020 - May 2022</p>
             </article>
             <!--I added changed the col length for this because it would not start at the left. I also added margin to top.-->
             <article class="activity col-12 col-sm-3 e-about mt-1">
                 <h4 class="col-12 col-sm-12 e-titles">UNC Swim Club</h4>
-                <p class="col-12 col-sm-12 e-time">Aug. 2018 to May 2022</p>
+                <p class="col-12 col-sm-12 e-time">Aug. 2018 - May 2022</p>
             </article>
         </section>
         <h2 class="col-12 col-sm-12 section-titles certs">Certifications</h2>
