--- a/experience.html
+++ b/experience.html
@@ -65,7 +65,7 @@
                 <p class="col-12 col-sm-12 e-time"><i>Sept. 2024 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Durham, North Carolina</p>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Under close supervision performs preliminary screening examinations for physician review including, but not limited to, central and peripheral visual field tests; simple color vision tests; indentation and applantation tonometry tests to determine intraocular pressure and pupil testing for size, equality and reaction prior to dilation.</li>
+                    <li class="col-12 col-sm-12">Under close supervision performs preliminary screening examinations for physician review including, but not limited to, central and peripheral visual field tests; simple color vision tests; indentation and applanation tonometry tests to determine intraocular pressure and pupil testing for size, equality and reaction prior to dilation.</li>
                     <li class="col-12 col-sm-12">Examines the cornea, lens, and anterior chamber of the eye using a slit lamp and note variations from normal.</li>
                     <li class="col-12 col-sm-12">Measures acuity of patient, with and without glasses, for distance and near vision; obtains optical and lensometry measurements to determine lens prescription and correct acuity problems; records findings on patient chart. Administers Electro-Retinogram and Electro-Oculogram tests to patients.</li>
                     <li class="col-12 col-sm-12">Obtains medical and personal data for patient charts.</li>
