--- a/experience.html
+++ b/experience.html
@@ -60,7 +60,7 @@
         <section class="col-12 col-sm-12 experience"></section>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant (OA)</h4>
                 <h5 class="col-12 col-sm-12 e-co">Duke Eye Center - Main Campus</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Sept. 2024 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Durham, North Carolina</p>
@@ -82,7 +82,6 @@
                 <h4 class="col-12 col-sm-12 e-titles">Photographer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Mar. 2016 - Present</i></p>
-                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Manages photography projects, from planning and shooting to post-processing, ensuring high-quality images</li>
                     <li class="col-12 col-sm-12">Collaborates closely with clients, effectively capturing and showcasing their individuality within diverse environments</li>
@@ -94,7 +93,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img id="saw_photo" class="col-12 col-sm-12 col-lg-6" src="BRP_Fall_Portrait.jpg" onMouseDown="popupMsg('Please do not download this image')">
+                <img id="saw_photo" class="col-12 col-sm-12 col-lg-6" src="talents.jpg" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="https://www.stephenwenzelphotography.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Stephen Wenzel Photography</a>
             </article>
 
@@ -138,7 +137,7 @@
             </article>
 
             <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant (OA)</h4>
                 <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
                 <p class="col-12 col-sm-12 e-time"><i>May 2022 - Apr. 2023</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
@@ -173,13 +172,13 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <iframe id="kinesin" class="col-12 col-sm-12 col-lg-6" src="https://www.youtube-nocookie.com/embed/y-uuk4Pr2i8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Professionally animated video of a kinesin protein walking, carrying a vesicle towards the plus end of a microtubule."></iframe>
+                <img class="col-12 col-sm-12 col-lg-6" src="dTAT_S2.jpg" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="http://rogerslab.unc.edu/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-1" target="blank">Dr. Stephen Rogers' Lab</a>
                 <a href="https://www.microscope.healthcare.nikon.com/products/inverted-microscopes/eclipse-ti2-series" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-1 mb-3" target="blank">Nikon Eclipse Ti2 Series</a>
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Organic Chemistry II Peer Mentor</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Organic Chemistry II<br> Peer Mentor</h4>
                 <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Aug. 2021 - Dec. 2021,</i></p>
                 <p class="col-12 col-sm-12 e-time"><i>Jan. 2022 - Apr. 2022</i></p>
@@ -192,7 +191,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="organic_chem.jpg" onMouseDown="popupMsg('Please do not download this image')">
+                <img class="col-12 col-sm-12 col-lg-6" src="pm.jpg" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="https://www.togetherplatform.com/blog/peer-mentorship" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-1" target="blank">How to be a Great Peer Mentor</a>
                 <a href="https://www.liberty.edu/casas/blog/the-power-of-peer-mentoring/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-1 mb-3" target="blank">The Power of Peer Mentoring</a>
             </article>
@@ -212,7 +211,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img id="cssc_pic" class="col-12 col-sm-12 col-lg-6" href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" src="CarolinaCSSC1-768x554.png" onMouseDown="popupMsg('Please do not download this image')">
+                <img id="cssc_pic" class="col-12 col-sm-12 col-lg-6" href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" src="cssc_50.png" onMouseDown="popupMsg('Please do not download this image')">
                 <a href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Carolina COVID-19 Student Services Corps</a>
             </article>
             
@@ -231,7 +230,7 @@
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
                 <img class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1067151256/m%3D900/v2?sig=c8bf9335a1c396f9c2a060c3336e2b3630dce36af937a90e16f34faab7edbc67" onMouseDown="popupMsg('Please do not download this image')">
-                <a href="https://www.wncentdoctors.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Western Carolina ENT & Center for Hearing</a>
+                <a href="https://www.wncentdoctors.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Western Carolina Ear, Nose, & Throat Specialists</a>
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
