--- a/printing.html
+++ b/printing.html
@@ -195,6 +195,12 @@
         <h2 class="col-12 col-sm-12 section-titles activities">Activities</h2>
         <section class="col-12 col-sm-12 group act-border">
             <article class="activity col-3 col-sm-3 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Patient Experience Volunteer</h4>
+                <p class="col-12 col-sm-12 e-time">Duke University Hospital - North Tower</p>
+                <p class="col-12 col-sm-12 e-time">"2025 Most Supportive Volunteer"</p>
+                <p class="col-12 col-sm-12 e-time">Nov. 2024 - Present</p>
+            </article>
+            <article class="activity col-3 col-sm-3 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Field Instructor & Videographer</h4>
                 <p class="col-12 col-sm-12 e-time">Tuscola High School Marching Band</p>
                 <p class="col-12 col-sm-12 e-time">July 2023 - Dec. 2023,</p>
@@ -210,14 +216,8 @@
                 <h5 class="col-12 col-sm-12 e-co">Social Media Chair: August '21 - May '22</h5>
                 <p class="col-12 col-sm-12 e-time">Member: Jan. 2020 - May 2022</p>
             </article>
-            <!--I added changed the col length for this because it would not start at the left. I also added margin to top.-->
-            <article class="activity col-3 col-sm-3 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">UNC Swim Club</h4>
-                <p class="col-12 col-sm-12 e-time">Chapel Hill, NC</p>
-                <p class="col-12 col-sm-12 e-time">Aug. 2018 - May 2022</p>
-            </article>
         </section>
-        <h2 class="col-12 col-sm-12 section-titles certifications">Certifications</h2>
+        <h2 class="col-12 col-sm-12 section-titles certifications">Certifications & Awards</h2>
         <section class="col-12 col-sm-12 group"></section>
             <article class="cert col-4 col-sm-4 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Basic Life Support (CPR and AED)</h4>
@@ -230,9 +230,9 @@
                 <h5 class="col-12 col-sm-12 e-co"><i>Expires Mar. 27th, 2025</i></h5>
             </article>
             <article class="cert col-4 col-sm-4 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Healthcare - CPR/AED</h4>
-                <h5 class="col-12 col-sm-12 e-co">National CPR Foundation</h5>
-                <h5 class="col-12 col-sm-12 e-co"><i>Expires Mar. 16th, 2025</i></h5>
+                <h4 class="col-12 col-sm-12 e-titles">Eagle Scout Award</h4>
+                <h5 class="col-12 col-sm-12 e-co">The Boy Scouts of America</h5>
+                <h5 class="col-12 col-sm-12 e-co"><i>Awarded Nov. 2017</i></h5>
             </article>
     </section>
 </main>
