--- a/education.html
+++ b/education.html
@@ -30,26 +30,26 @@
     </head>
 <body class="container-fluid">
 
-    <header class="row" style="z-index: 9;">
+    <header class="row">
         <nav class="col-12 col-sm-12 navbar navbar-expand-md">
             <div id="menu-button-container" class="col-12 col-sm-12">
                 <a class="col-12 col-sm-12" id="menu" type="button" data-toggle="collapse" data-target="#sawnavbar" aria-controls="sawnavbar" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></a>
             </div>
             <nav class="col-12 col-sm-12 collapse navbar-collapse" id="sawnavbar">
                 <ul class="col-12 col-sm-12 navbar-nav">
-                    <li class="col-12 col-md-2 nav-item">
+                    <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="index.html">Home</a> <!--DON"T USE THE BACKSLASH AT THE FRONT!-->
                     </li>
-                    <li class="col-12 col-md-2 nav-item active">
+                    <li class="col-12 col-md-3 nav-item active">
                         <a class="nav-link" href="education.html">Education</a>
                     </li>
-                    <li class="col-12 col-md-2 nav-item">
+                    <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="experience.html">Experience</a>
                     </li>
-                    <li class="col-12 col-md-2 nav-item">
+                    <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="https://www.stephenwenzelphotography.com/">Photography</a>
                     </li>
-                    <li class="col-12 col-md-2 nav-item">
+                    <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="printing.html">Print Resume</a>
                     </li>
                 </ul>
@@ -58,58 +58,52 @@
     </header>
 
     <main class="row">
-        <section class="col-12 col-sm-12 experience p-0">
+        <section class="col-12 col-sm-12 experience">
 
             <h2 class="col-12 col-sm-12 e-titles">Bachelor's Degree</h2>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <img id="unc" class="col-11 col-sm-8 col-lg-6" src="unc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
-                <h5 class="col-12 col-sm-12 e-co text-center">Bachelor of Science - B.S. Biology, Chemistry & Neuroscience Minors</h5>
-                <p class="col-12 col-sm-12 e-time text-center"><i>August 2018 - May 2022</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Chapel Hill, North Carolina</p>
+            <article class="col-12 col-sm-12 col-lg-12 e-about">
+                <img id="unc" class="col-12 col-sm-10 col-lg-8" src="unc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
+                <h3 class="e-co ">Bachelor of Science in Biology<br><span>Chemistry & Neuroscience Minors</span></h3>
+                <p class="col-12 col-sm-12">Chapel Hill, North Carolina</p>
+                <p class="col-12 col-sm-12">August 2018 - May 2022</p>
             </article>
 
             <h2 class="col-12 col-sm-12 e-titles">Post-Baccalaureate Courses</h2>
 
-            <article class="col-12 col-sm-12 col-lg-4 e-about">
-                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="ncsu_logo.png" onMouseDown="popupMsg('Please do not download this image')">
-                <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
-                <p class="col-12 col-sm-12 e-time text-center"><i>May 2023 - June 2023</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Human Anatomy & Physiology I</p>
+            <article class="col-12 col-sm-12 col-lg-6 e-about">
+                <img id="scc" class="col-12 col-sm-10 col-lg-11" src="ncsu_logo.png" onMouseDown="popupMsg('Please do not download this image')">
+                <p class="col-12 col-sm-12">Human Anatomy & Physiology I</p>
+                <p class="col-12 col-sm-12">May 2023 - June 2023</p>
             </article>
-            <article class="col-12 col-sm-12 col-lg-4 e-about">
-                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="ecu_logo.png" onMouseDown="popupMsg('Please do not download this image')">
-                <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
-                <p class="col-12 col-sm-12 e-time text-center"><i>May 2021 - June 2023</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Human Genetics / General Physics II</p>
+            <article class="col-12 col-sm-12 col-lg-6 e-about">
+                <img id="scc" class="col-12 col-sm-10 col-lg-11" src="ecu_logo.png" onMouseDown="popupMsg('Please do not download this image')">
+                <p class="col-12 col-sm-12">Human Genetics / General Physics II</p>
+                <p class="col-12 col-sm-12">May 2021 - June 2023</p>
             </article>
-            <article class="col-12 col-sm-12 col-lg-4 e-about">
-                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="sandhillscc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
-                <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
-                <p class="col-12 col-sm-12 e-time text-center"><i>August 2023 - December 2023</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Microbiology</p>
+            <article class="col-12 col-sm-12 col-lg-6 e-about">
+                <img id="scc" class="col-12 col-sm-10 col-lg-11" src="sandhillscc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
+                <p class="col-12 col-sm-12">Microbiology</p>
+                <p class="col-12 col-sm-12">August 2023 - December 2023</p>
             </article>
-            <article class="col-12 col-sm-12 col-lg-4 e-about">
-                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="scc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
-                <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
-                <p class="col-12 col-sm-12 e-time text-center"><i>January 2023 - May 2023</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Human Anatomy & Physiology II</p>
+            <article class="col-12 col-sm-12 col-lg-6 e-about">
+                <img id="scc" class="col-12 col-sm-10 col-lg-11" src="scc_logo.png" onMouseDown="popupMsg('Please do not download this image')">
+                <p class="col-12 col-sm-12">Human Anatomy & Physiology II</p>
+                <p class="col-12 col-sm-12">January 2023 - May 2023</p>
             </article>
-            <article class="col-12 col-sm-12 col-lg-4 e-about">
-                <img id="hcc" class="col-8 col-sm-6 col-lg-4" src="HCC-Logo-White-footer.png" onMouseDown="popupMsg('Please do not download this image')">
-                <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
-                <p class="col-12 col-sm-12 e-time text-center"><i>August 2022 - May 2023</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Medical Terminology for Health Professionals I & II,</p>
-                <p class="col-12 col-sm-12 e-location text-center">Professional Interactions in Healthcare</p>
+            <article class="col-12 col-sm-12 col-lg-6 e-about">
+                <img id="hcc" class="col-12 col-sm-10 col-lg-11" src="HCC.jpg" onMouseDown="popupMsg('Please do not download this image')">
+                <p class="col-12 col-sm-12">Medical Terminology for Health Professionals I & II,</p>
+                <p class="col-12 col-sm-12">Professional Interactions in Healthcare</p>
+                <p class="col-12 col-sm-12">August 2022 - May 2023</p>
             </article>
 
             <h2 class="col-12 col-sm-12 e-titles">High School Diploma</h2>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <img id="ths" class="col-11 col-sm-8 col-lg-6" src="ths.png" onMouseDown="popupMsg('Please do not download this image')">
-                <h5 class="col-12 col-sm-12 e-co text-center">High School Diploma</h5>
-                <p class="col-12 col-sm-12 e-time text-center"><i>August 2014 - June 2018</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Waynesville, North Carolina</p>
+            <article class="col-12 col-sm-12 col-lg-12 e-about">
+                <img id="ths" class="col-12 col-sm-10 col-lg-10" src="ths.png" onMouseDown="popupMsg('Please do not download this image')">
+                <p class="col-12 col-sm-12">Waynesville, North Carolina</p>
+                <p class="col-12 col-sm-12">August 2014 - June 2018</p>
             </article>
         </section>
     </main>
