--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Stephen Wenzel - Main</title>
+        <title>Stpehen Wenzel - Resume</title>
         <link rel="shortcut icon" type="image/jpg" href="/resume/stephen wenzel logo.png"/>
     
         <!-- Link to Bootstrap 4 CSS -->
@@ -30,32 +30,34 @@
     </head>
 
 <body class="container-fluid">
-    <header class="row" style="z-index: 9;">
+
+    <header class="row">
         <nav class="col-12 col-sm-12 navbar navbar-expand-md">
             <div id="menu-button-container" class="col-12 col-sm-12">
                 <a class="col-12 col-sm-12" id="menu" type="button" data-toggle="collapse" data-target="#sawnavbar" aria-controls="sawnavbar" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></a>
             </div>
             <nav class="col-12 col-sm-12 collapse navbar-collapse" id="sawnavbar">
                 <ul class="col-12 col-sm-12 navbar-nav">
-                    <li class="col-12 col-md-2 nav-item active">
-                        <a class="nav-link" href="index.html">Main</a> <!--DON"T USE THE BACKSLASH AT THE FRONT!-->
+                    <li class="col-12 col-md-3 nav-item">
+                        <a class="nav-link" href="index.html">Home</a> <!--DON"T USE THE BACKSLASH AT THE FRONT!-->
                     </li>
-                    <li class="col-12 col-md-2 nav-item">
+                    <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="education.html">Education</a>
                     </li>
-                    <li class="col-12 col-md-2 nav-item">
+                    <li class="col-12 col-md-3 nav-item active">
                         <a class="nav-link" href="experience.html">Experience</a>
                     </li>
-                    <li class="col-12 col-md-2 nav-item">
+                    <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="https://www.stephenwenzelphotography.com/">Photography</a>
                     </li>
-                    <li class="col-12 col-md-2 nav-item">
+                    <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="printing.html">Print Resume</a>
                     </li>
                 </ul>
             </nav>
         </nav>
-    </header>
+    </header>    
+    
     <main class="row">
         <section id="content" class="col-12 col-sm-12 col-lg-12">
             <article class="col-12 col-sm-6 col-lg-4 headshot_box">
@@ -63,8 +65,8 @@
             </article>
             <article class="col-12 col-sm-12 col-md-6 col-lg-6 mt-2 signature_title">
                 <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Please do not download this image')">
-                <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">INTERACTIVE ONLINE RESUME</p>
-                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(October 2024 Update)</p>
+                <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">INTERACTIVE, ONLINE RESUME</p>
+                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(March 2025 Update)</p>
             </article>
         </section>
     </main>
