--- a/experience.html
+++ b/experience.html
@@ -4,8 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Experience - Stephen Wenzel</title>
-    <link rel="shortcut icon" type="image/jpg" href="/resume/stephen wenzel logo.png"/>
+    <title>Stephen Wenzel - Experience</title>
+    <link rel="shortcut icon" type="image/jpg" href="stephen_wenzel_logo.png"/>
 
     <!-- Link to Bootstrap 4 CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
