--- a/printing.html
+++ b/printing.html
@@ -26,8 +26,8 @@
 
 <header class="container">
     <div class="row buttons">
-        <p class="col-10 col-sm-10">
-            For the best results, please print in color and include background graphics. This will ensure that your copy reflects my unique style and enhances the legibility of my resume.</p>
+        <p class="col-11 col-sm-8">
+            For optimal results, please print in color with background graphics enabled. This will accurately preserve the design elements of my resume, ensuring both visual clarity and a professional presentation.</p>
         <a href="javascript:window.print()" role="button" class="btn btn-info col-7 col-sm-7 mb-3">Click to Print</a>
         <a href="index.html" role="button" class="btn btn-info col-7 col-sm-7 mt-3">Return to Homepage</a>
     </div>
