--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Stpehen Wenzel - Resume</title>
-        <link rel="shortcut icon" type="image/jpg" href="/resume/stephen wenzel logo.png"/>
+        <title>Stephen Wenzel</title>
+        <link rel="shortcut icon" type="image/jpg" href="stephen_wenzel_logo.png"/>
     
         <!-- Link to Bootstrap 4 CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -38,17 +38,17 @@
             </div>
             <nav class="col-12 col-sm-12 collapse navbar-collapse" id="sawnavbar">
                 <ul class="col-12 col-sm-12 navbar-nav">
-                    <li class="col-12 col-md-3 nav-item">
+                    <li class="col-12 col-md-3 nav-item active">
                         <a class="nav-link" href="index.html">Home</a> <!--DON"T USE THE BACKSLASH AT THE FRONT!-->
                     </li>
                     <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="education.html">Education</a>
                     </li>
-                    <li class="col-12 col-md-3 nav-item active">
+                    <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="experience.html">Experience</a>
                     </li>
                     <li class="col-12 col-md-3 nav-item">
-                        <a class="nav-link" href="https://www.stephenwenzelphotography.com/">Photography</a>
+                        <a class="nav-link" href="https://stephenawenzel.github.io/photography/index.html">Photography</a>
                     </li>
                     <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="printing.html">Print Resume</a>
