--- a/experience.html
+++ b/experience.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="experience.html">Experience</a>
                     </li>
                     <li class="col-12 col-md-3 nav-item">
-                        <a class="nav-link" href="https://www.stephenwenzelphotography.com/">Photography</a>
+                        <a class="nav-link" href="https://stephenawenzel.github.io/photography/">Photography</a>
                     </li>
                     <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="printing.html">Print Resume</a>
@@ -59,10 +59,10 @@
     </header>    
 
     <main class="row">
-        <section class="col-12 col-sm-12 experience"></section>
+        <section class="col-12 col-sm-12 experience">
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <section class="job col-12 col-sm-12">
+                <section class="job col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant (OA)</h1>
                     <p class="col-12 col-sm-12 e-co">Duke Department of Ophthalmology <br> Retina & Glaucoma Division <br> <i>Main Campus</i><p>
                     <p class="col-12 col-sm-12 e-location">Durham, North Carolina</p>
@@ -83,10 +83,11 @@
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <section class="job col-12 col-sm-12">
+                <section class="job col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Photographer</h1>
                     <p class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</p>
-                    <p class="col-12 col-sm-12 e-location">Capturing moments in Durham, NC, and beyond.</p>
+                    <p class="col-12 col-sm-12 e-location">Community, Collaboration, Creativity</p>
+                    <p class="col-12 col-sm-12 e-location">Portraits & Nature Photography</p>
                     <p class="col-12 col-sm-12 e-time">Mar. 2016 - Present</p>
                 </section>
                 <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -105,7 +106,7 @@
             </article>
 
             <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
-                <section class="job col-12 col-sm-12">
+                <section class="job col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Medical Assistant</h1>
                     <p class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose, and Throat Specialists</p>
                     <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
@@ -128,7 +129,7 @@
             </article>
 
             <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
-                <section class="job col-12 col-sm-12">
+                <section class="job col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Marketing Manager</h1>
                     <p class="col-12 col-sm-12 e-co">Wenzel Facial Plastic Surgery</p>
                     <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
@@ -148,7 +149,7 @@
             </article>
 
             <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
-                <section class="job col-12 col-sm-12">
+                <section class="job col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant (OA)</h1>
                     <p class="col-12 col-sm-12 e-co">Mountain Eye Associates</p>
                     <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
@@ -172,8 +173,8 @@
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <section class="job col-12 col-sm-12">
-                    <h1 class="col-12 col-sm-12 e-titles">Undergraduate Researcher</h1>
+                <section class="job col-11 col-sm-12">
+                    <h1 class="col-12 col-sm-12 e-titles">Undergraduate Research Assistant</h1>
                     <p class="col-12 col-sm-12 e-co">Dr. Stephen Rogers's Lab - UNC Chapel Hill Biology Department</p>
                     <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                     <p class="col-12 col-sm-12 e-time">Jan. 2022 - Apr. 2022</p>
@@ -193,8 +194,8 @@
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <section class="job col-12 col-sm-12">
-                    <h1 class="col-12 col-sm-12 e-titles">Organic Chemistry II<br> Peer Mentor</h1>
+                <section class="job col-11 col-sm-12">
+                    <h1 class="col-12 col-sm-12 e-titles">Organic Chemistry Peer Mentor</h1>
                     <p class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</p>
                     <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                     <p class="col-12 col-sm-12 e-time">Aug. 2021 - Dec. 2021,</p>
@@ -214,7 +215,7 @@
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <section class="job col-12 col-sm-12">
+                <section class="job col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Undergraduate COVID-19 Testing Volunteer</h1>
                     <p class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</p>
                     <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
@@ -235,7 +236,7 @@
             </article>
             
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <section class="job col-12 col-sm-12">
+                <section class="job col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Online Marketing Assistant</h1>
                     <p class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</p>
                     <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
