--- a/education.html
+++ b/education.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="experience.html">Experience</a>
                     </li>
                     <li class="col-12 col-md-3 nav-item">
-                        <a class="nav-link" href="https://stephenawenzel.github.io/photography/index.html">Photography</a>
+                        <a class="nav-link" href="https://stephenawenzel.github.io/photography/">Photography</a>
                     </li>
                     <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="printing.html">Print Resume</a>
