--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="experience.html">Experience</a>
                     </li>
                     <li class="col-12 col-md-3 nav-item">
-                        <a class="nav-link" href="https://stephenawenzel.github.io/photography/index.html">Photography</a>
+                        <a class="nav-link" href="https://stephenawenzel.github.io/photography/">Photography</a>
                     </li>
                     <li class="col-12 col-md-3 nav-item">
                         <a class="nav-link" href="printing.html">Print Resume</a>
@@ -66,7 +66,7 @@
             <article class="col-12 col-sm-12 col-md-6 col-lg-6 mt-2 signature_title">
                 <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Please do not download this image')">
                 <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">INTERACTIVE, ONLINE RESUME</p>
-                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(March 2025 Update)</p>
+                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">April 2025 Update</p>
             </article>
         </section>
     </main>
