--- a/printing.html
+++ b/printing.html
@@ -42,7 +42,7 @@
                 <a class="col-12 col-sm-12 text-center" id="email" href="mailto:stephenawenzel@gmail.com">stephenawenzel@gmail.com</a>
                 <a class="col-12 col-sm-12 text-center" id="phone" href="tel:8287344555">828-734-4555</a>
                 <a class="col-12 col-sm-12 text-center" id="website">https://stephenawenzel.github.io/resume/</a>
-                <a class="col-12 col-sm-12 text-center" id="website">https://www.stephenwenzelphotography.com</a>
+                <a class="col-12 col-sm-12 text-center" id="website">https://stephenawenzel.github.io/photography/</a>
             </article>
 
 
@@ -225,9 +225,9 @@
                 <h5 class="col-12 col-sm-12 e-co"><i>Expires Sept. 2026</i></h5>
             </article>
             <article class="cert col-4 col-sm-4 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Adult and Pediatric First Aid/CPR/AED</h4>
-                <h5 class="col-12 col-sm-12 e-co">American Red Cross</h5>
-                <h5 class="col-12 col-sm-12 e-co"><i>Expires Mar. 27th, 2025</i></h5>
+                <h4 class="col-12 col-sm-12 e-titles">2025 Volunteer Award<br>"Most Supportive Volunteer"</h4>
+                <h5 class="col-12 col-sm-12 e-co">Duke Unviersity Hopstial Volunteering Services</h5>
+                <h5 class="col-12 col-sm-12 e-co"><i>Awarded Feb. 2025</i></h5>
             </article>
             <article class="cert col-4 col-sm-4 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Eagle Scout Award</h4>
