Final PA version
Updated all descriptions with less than 600 characters, updated pictures for experiences, added DUH volunteering, replaced printing with downloading PDF resume, updated links for all experiences on all device types.

--- a/education.html
+++ b/education.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="https://stephenawenzel.github.io/photography/">Photography</a>
                     </li>
                     <li class="col-12 col-md-3 nav-item">
-                        <a class="nav-link" href="printing.html">Print Resume</a>
+                        <a class="nav-link" href="printing.html">Download</a>
                     </li>
                 </ul>
             </nav>
