--- a/printing.html
+++ b/printing.html
@@ -42,8 +42,8 @@
                 <a class="col-12 col-sm-12 text-center" id="location">Durham, North Carolina</a>
                 <a class="col-12 col-sm-12 text-center" id="email" href="mailto:stephenawenzel@gmail.com">stephenawenzel@gmail.com</a>
                 <a class="col-12 col-sm-12 text-center" id="phone" href="tel:8287344555">828-734-4555</a>
+                <p class="col-12 col-sm-12 text-center"></p>
                 <a class="col-12 col-sm-12 text-center" id="website">stephenawenzel.github.io/resume</a>
-                <a class="col-12 col-sm-12 text-center" id="website">stephenawenzel.github.io/photography</a>
             </article>
         </section>
         <section id="education" class="col-6 col-sm-6 experience">
