--- a/experience.html
+++ b/experience.html
@@ -111,7 +111,7 @@
                 </section>
                 <article class="col-12 col-sm-9 col-lg-10 image_and_link">
                     <img id="saw_photo" class="col-12 col-sm-12 col-lg-6" src="talents.jpg" onMouseDown="popupMsg('Please do not download this image')">
-                    <a href="https://www.stephenwenzelphotography.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">View Stephen Wenzel Photography</a>
+                    <a href="https://stephenawenzel.github.io/photography/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">View Stephen Wenzel Photography</a>
                 </article>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Operates a self-run photography business focused on portraits, landscapes, wildlife, and fine art</li>
