--- a/printing.html
+++ b/printing.html
@@ -42,7 +42,7 @@
                 <a class="col-12 col-sm-12 text-center" id="location">Durham, North Carolina</a>
                 <a class="col-12 col-sm-12 text-center" id="email" href="mailto:stephenawenzel@gmail.com">stephenawenzel@gmail.com</a>
                 <a class="col-12 col-sm-12 text-center" id="phone" href="tel:8287344555">828-734-4555</a>
-                <p class="col-12 col-sm-12 text-center"></p>
+                <p style="margin: 0; padding: 0;" class="col-12 col-sm-12 text-center">View online, interactive resume below:</p>
                 <a class="col-12 col-sm-12 text-center" id="website">stephenawenzel.github.io/resume</a>
             </article>
         </section>
