--- a/printing.html
+++ b/printing.html
@@ -28,7 +28,7 @@
     <div class="row buttons">
         <p class="col-11 col-sm-8">
             Click the button below to download my resume as a PDF document</p>
-        <a href="Stephen_Wenzel_042025.pdf" download class="btn btn-info col-7 col-sm-7 mb-3">Download PDF</a>
+        <a href="Stephen_Wenzel_042025.pdf" download class="btn btn-info col-7 col-sm-7 mb-3">Download PDF version</a>
         <a href="index.html" role="button" class="btn btn-info col-7 col-sm-7 mt-3">Return to Homepage</a>
     </div>
 </header>
