--- a/experience.html
+++ b/experience.html
@@ -135,28 +135,7 @@
                 </article>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Performed vitals, orthostatic testing, and scribed HPIs and assessments for providers</li>
-                    <li class="col-12 col-sm-12">Assisted in minor ENT surgeries and procedures as a non-sterile tech</li>
-                    <li class="col-12 col-sm-12">Trained new staff and developed a comprehensive MA guide</li>
-                    <li class="col-12 col-sm-12">Maintained infection control through instrument sterilization and room prep</li>
-                    <li class="col-12 col-sm-12">Helped develop clinic manuals and updated the practice website</li>
-                    <li class="col-12 col-sm-12">Supported patient care by assisting with check-ins, answering questions, and ensuring clinic flow</li>
-                </ul>
-            </article>
-
-            <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
-                <section class="job col-11 col-sm-12">
-                    <h1 class="col-12 col-sm-12 e-titles">Marketing Manager</h1>
-                    <p class="col-12 col-sm-12 e-co">Wenzel Facial Plastic Surgery</p>
-                    <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                    <p class="col-12 col-sm-12 e-time">May 2023 - June 2024</p>
-                </section>
-                <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                    <img id="wfps" class="col-12 col-sm-12 col-lg-7" src="wfps.jpg" onMouseDown="popupMsg('Please do not download this image')">
-                    <a href="https://wenzelfacialsurgery.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">View the WFPS website</a>
-                </article>
-                <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Performed vitals, orthostatic testing, and scribed HPIs and assessments for providers</li>
-                    <li class="col-12 col-sm-12">Assisted in minor ENT surgeries and procedures as a non-sterile tech</li>
+                    <li class="col-12 col-sm-12">Assisted as a circulator during in-office procedures and surgeries</li>
                     <li class="col-12 col-sm-12">Trained new staff and developed a comprehensive MA guide</li>
                     <li class="col-12 col-sm-12">Maintained infection control through instrument sterilization and room prep</li>
                     <li class="col-12 col-sm-12">Helped develop clinic manuals and updated the practice website</li>
