--- a/printing.html
+++ b/printing.html
@@ -62,10 +62,10 @@
     </article>
 
     <section id="experience" class="row experience">
-        <h2 class="col-12 col-sm-12 section-titles">Experience</h2>
+        <h2 style="margin-top: 0.5em; font-size: 24pt;" class="col-12 col-sm-12 section-titles">Experience</h2>
         <section class="col-12 col-sm-12 group">
 
-            <article style="margin-top: 1em;" class="col-12 col-sm-12 col-lg-12 e-about job">
+            <article style="margin-top: 2em" class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant (OA)</h1>
                     <p class="col-12 col-sm-12 e-co">Duke Department of Ophthalmology <br> Retina & Glaucoma Division <br> <i>Main Campus</i><p>
@@ -82,7 +82,7 @@
                 </ul>
             </article>
 
-            <article style="margin-top: 2em;" class="col-12 col-sm-12 col-lg-12 e-about job">
+            <article style="margin-top: 3em" class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Photographer</h1>
                     <p class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</p>
@@ -99,7 +99,22 @@
                 </ul>
             </article>
 
-            <article style="margin-top: 2em;" class="col-12 col-sm-12 col-lg-12 e-about job">
+            <article style="margin-top: 3em" class="col-12 col-sm-12 col-lg-12 e-about job">
+                <section class=" col-11 col-sm-12">
+                    <h1 class="col-12 col-sm-12 e-titles">Visual & Media Coordinator</h1>
+                    <p class="col-12 col-sm-12 e-co">Tuscola High School Marching Band</p>
+                    <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                    <p class="col-12 col-sm-12 e-time">Aug. 2023 - Dec. 2023</p>
+                </section>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Collaborated with band directors to enhance performances through choreography and leadership mentoring during two marching band seasons (8 hrs/week)</li>
+                    <li class="col-12 col-sm-12">Led sectional rehearsals and full-band practices for 80 students, offering real-time feedback and personalized instruction</li>
+                    <li class="col-12 col-sm-12">Created a disciplined yet supportive learning environment</li>
+                    <li class="col-12 col-sm-12">Filmed and edited performances to assist directors with strategic review and support student growth</li>
+                </ul>
+            </article>
+
+            <article style="margin-top: 3em" class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Medical Assistant</h1>
                     <p class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose, and Throat Specialists</p>
@@ -108,7 +123,7 @@
                 </section>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Performed vitals, orthostatic testing, and scribed HPIs and assessments for providers</li>
-                    <li class="col-12 col-sm-12">Assisted in minor ENT surgeries and procedures as a non-sterile tech</li>
+                    <li class="col-12 col-sm-12">Assisted as a circulator during in-office procedures and surgeries</li>
                     <li class="col-12 col-sm-12">Trained new staff and developed a comprehensive MA guide</li>
                     <li class="col-12 col-sm-12">Maintained infection control through instrument sterilization and room prep</li>
                     <li class="col-12 col-sm-12">Helped develop clinic manuals and updated the practice website</li>
@@ -116,24 +131,7 @@
                 </ul>
             </article>
 
-            <article style="margin-top: 2em;" class="col-12 col-sm-12 col-lg-12 e-about job">
-                <section class="col-11 col-sm-12">
-                    <h1 class="col-12 col-sm-12 e-titles">Marketing Manager</h1>
-                    <p class="col-12 col-sm-12 e-co">Wenzel Facial Plastic Surgery</p>
-                    <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                    <p class="col-12 col-sm-12 e-time">May 2023 - June 2024</p>
-                </section>
-                <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Performed vitals, orthostatic testing, and scribed HPIs and assessments for providers</li>
-                    <li class="col-12 col-sm-12">Assisted in minor ENT surgeries and procedures as a non-sterile tech</li>
-                    <li class="col-12 col-sm-12">Trained new staff and developed a comprehensive MA guide</li>
-                    <li class="col-12 col-sm-12">Maintained infection control through instrument sterilization and room prep</li>
-                    <li class="col-12 col-sm-12">Helped develop clinic manuals and updated the practice website</li>
-                    <li class="col-12 col-sm-12">Supported patient care by assisting with check-ins, answering questions, and ensuring clinic flow</li>
-                </ul>
-            </article>
-
-            <article style="margin-top: 5em;" class="col-12 col-sm-12 col-lg-12 e-about job">
+            <article style="margin-top: 3.5em" class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h1>
                     <p class="col-12 col-sm-12 e-co">Mountain Eye Associates</p>
@@ -149,7 +147,7 @@
                 </ul>
             </article>
 
-            <article style="margin-top: 2em;" class="col-12 col-sm-12 col-lg-12 e-about job">
+            <article style="margin-top: 0.75em" class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Undergraduate Research Assistant</h1>
                     <p class="col-12 col-sm-12 e-co">Dr. Stephen Rogers's Lab - UNC Chapel Hill Biology Department</p>
@@ -165,7 +163,7 @@
                 </ul>
             </article>
 
-            <article style="margin-top: 2em;" class="col-12 col-sm-12 col-lg-12 e-about job">
+            <article style="margin-top: 0.75em" class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Organic Chemistry II Peer Mentor</h1>
                     <p class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</p>
@@ -180,7 +178,7 @@
                 </ul>
             </article>
 
-            <article style="margin-top: 2em;" class="col-12 col-sm-12 col-lg-12 e-about job">
+            <article style="margin-top: 0.75em" class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Undergraduate COVID-19 Testing Volunteer</h1>
                     <p class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</p>
@@ -196,7 +194,7 @@
                 </ul>
             </article>
 
-            <article style="margin-top: 2em;" class="col-12 col-sm-12 col-lg-12 e-about job">
+            <article style="margin-top: 0.75em" class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
                     <h1 class="col-12 col-sm-12 e-titles">Online Marketing Assistant</h1>
                     <p class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</p>
